fixed issue with really long names of cards and groups - now breaks lines appropriately so it doesn't overflow the div

--- a/css/cardsort.css
+++ b/css/cardsort.css
@@ -59,6 +59,15 @@
 	border-radius: 4px;	
     word-wrap: break-word;
     cursor: move;
+    /* Warning: Needed for oldIE support, but words are broken up letter-by-letter */
+	 -ms-word-break: break-all;
+     word-break: break-all;
+     /* Non standard for webkit */
+    word-break: break-word;
+	-webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+	hyphens: auto;
 }
 
 .group .contenteditable {
@@ -109,6 +118,15 @@
 	font-size: 16px;
 	word-wrap: normal;
     border: solid 1px gray;
+	/* Warning: Needed for oldIE support, but words are broken up letter-by-letter */
+	 -ms-word-break: break-all;
+     word-break: break-all;
+     /* Non standard for webkit */
+    word-break: break-word;
+	-webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+	hyphens: auto;
 }
 
 .item:hover {
